--- a/style.css
+++ b/style.css
@@ -8,19 +8,17 @@ body{
     background-color: white;
 }
 p{
-    font-size: 13px;
+    font-size: 16px;
     font-weight: 500;
-    color: (235, 18%, 26%);
+    line-height: 24px;
 }
 
-#parent{
-    background-color : white;
-}
 #mobile_img img{
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 #mobile_img{
     height: 200px;
     border-radius: 0px 0px 20px 20px;
@@ -32,15 +30,16 @@ p{
 }
 
 #left{
-    margin:25px 30px;
+    padding:45px 30px 0px 30px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    justify-content: space-around;
+    gap: 30px;
     /* border: 2px solid red; */
 }
 
 #front_heading{
-    font-size: 35px;
+    font-size: 40px;
     font-weight: 700;
     color: hsl(235, 18%, 26%);
 }
@@ -48,13 +47,13 @@ p{
 #top{
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 25px;
 }
 
 #item{
     display: flex;
     align-items: flex-start;
-    gap: 10px;
+    gap: 12px;
 }
 
 #middle{
@@ -65,7 +64,7 @@ p{
 
 #middle img{
     height: auto;
-    width: 15px;
+    width: 18px;
 }
 
 
@@ -124,15 +123,18 @@ button:hover{
 }
 
 #dismiss{
-    height: 100vh;
+    height: 93vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    gap: 20px;
+    /* border: 2px solid red; */
     padding: 0px 20px 0px 20px;
+    /* margin-top: 130px; */
 }
 
 #dismiss_tic{
-    width: 50px;
+    width: 60px;
     height: auto;
 }
 
@@ -146,7 +148,7 @@ button:hover{
 #div1{
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 25px;
 }
 #dismiss_para{
     font-weight: 500;
@@ -160,7 +162,24 @@ button:hover{
     body{
         background-color: hsl(235, 18%, 26%);
     }
-
+    #front_heading{
+        font-size: 35px;
+        font-weight: 700;
+        color: hsl(235, 18%, 26%);
+    }
+    #middle img{
+        height: auto;
+        width: 15px;
+    }
+    #top{
+        display: flex;
+        flex-direction: column;
+        gap: 22px;
+    }
+    p{
+        font-size: 13px;
+        line-height: 20px;
+    }
     #mobile_img{
         display: none;
     }
@@ -190,7 +209,7 @@ button:hover{
         font-size: 40px;
     }
     #left{
-        gap: 30px;
+        gap: 25px;
         width: 400px;
         justify-content: center;
     }
